# sre-defender-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-inference.txt  supervisord.conf
config/: agent_rules.conf  nginx.conf
sandbox/node/: app.js  package.json
server/: __init__.py  app.py  requirements.txt  sre_defender_env_environment.py
tests/: conftest.py  test_models.py  test_task1.py  test_task2.py  test_task3.py
